update to background, update style

--- a/scss/modules/_variables.scss
+++ b/scss/modules/_variables.scss
@@ -4,8 +4,8 @@ $accentColor: #2D80D8;
 $textColor: #FFFEFF;
 $secondaryTextColor: #9E9D9E;
 
-$headerFont: 'Saira', sans-serif;
-$textFont: 'Montserrat', sans-serif;
+$headerFont: 'Sarala', sans-serif;
+$textFont: 'Raleway', sans-serif;
 
 $tablet: "760px";
 $desktop: "1025px";
