--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -2,29 +2,53 @@ header {
     width: 100vw;
     height: 100vh;
     @include desktop {
-        max-width: 1000px;
+        width: 99vw;
     }
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
+    background-image: url(../img/bgMobile.jpg);
+    @include desktop {
+        background-image: url(../img/bgDesktop.jpg);
+    }
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    > a {
+        width: 35vw;
+        height: 35vw;
+        margin-bottom: 15vh;
+        @include desktop {
+            width: 15vw;
+            height: 15vw;
+            margin-bottom: 10vh;
+            box-shadow: 0 1px 4px $secondaryTextColor;
+        }
+        background-image: url(../img/astrokino.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: contain;
+        opacity: 0.95;
+        display: block;
+    }
 }
 
 nav {
     width: 100%;
     height: 4rem;
     background-color: transparentize($bgColor, 0.4);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
+    display: none;
+    @include desktop {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        position: fixed;
+        top: 0;
+    }
     .menu-bar {
         width: 100%;
-        @include desktop {
-            max-width: 1000px;
-        }
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -49,14 +73,31 @@ nav {
             font-family: $headerFont;
             list-style-type: none;
             color: $textColor;
+            margin: 0 1rem 0;
         }
     }
 
 }
 
 h1 {
-    margin-top: 4rem;
     font-family: $headerFont;
-    font-size: 3rem;
+    font-size: 3.5rem;
+    line-height: 4rem;
     color: $textColor;
+    text-align: center;
+    @include desktop {
+        font-size: 5rem;
+        line-height: normal;
+    }
+    + p {
+        font-family: $textFont;
+        font-size: 1.2rem;
+        color: $textColor;
+        text-align: center;
+        width: 80%;
+        margin-top: 1rem;
+        @include desktop {
+            font-size: 1.6rem;
+        }
+    }
 }
