--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -8,6 +8,7 @@ main {
         font-family: $headerFont;
         color: $accentColor;
         font-size: 2.5rem;
+        text-align: center;
     }
 
     h3 {
@@ -38,8 +39,9 @@ section {
         }
         article {
             width: 100%;
+            padding: 0 1rem;
             @include desktop {
-                width: 30%;
+                width: 40%;
             }
         }
     }
