--- a/scss/modules/_variables.scss
+++ b/scss/modules/_variables.scss
@@ -1,11 +1,11 @@
-$bgColor: #191719;
+$bgColor: #00050b;
 $altColor: #0D2433;
 $accentColor: #2D80D8;
 $textColor: #FFFEFF;
 $secondaryTextColor: #9E9D9E;
 
-$headerFont: 'Sarala', sans-serif;
-$textFont: 'Raleway', sans-serif;
+$headerFont: 'Open Sans', sans-serif;
+$textFont: 'Titillium Web', sans-serif;
 
 $tablet: "760px";
 $desktop: "1025px";
