--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,3 +5,4 @@
 @import './partials/general.scss';
 @import './partials/header.scss';
 @import './partials/main.scss';
+@import './partials/footer.scss';
