--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -18,7 +18,7 @@ h2 {
     font-size: 1.5rem;
     text-align: center;
     @include desktop {
-        margin: 4rem 0;
+        margin-bottom: 4rem;
         border-top: 0;
         border-bottom: 1px solid transparentize($textColor, .9);
     }
